# MM

./: .dockerignore  .gitignore  README.md
backend/: __init__.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/ai/: __init__.py  agents.py  analyzer.py  config.py  observer.py  prompts.py  schemas.py  service.py  storage.py
backend/api/: __init__.py  ai_router.py  cache.py  config_router.py  dashboard.py  deps.py  indicators_router.py  logs_router.py  momentum_pulse.py  subscriptions.py  system.py  ws_brokers.py  ws_routes.py
backend/collector/: __init__.py  circuit_breaker.py  engine.py  exchange_client.py  hfd_client.py  kline_normalizer.py  rate_limiter.py  scheduler.py  subscription_mgr.py
backend/config/: .env.example  app.yaml  rules.default.yaml  rules.meta.yaml
backend/core/: __init__.py  config.py  exceptions.py  logging.py  rules_config.py  time_utils.py  timeframes.py
backend/rules/: __init__.py  features.py  runner.py
backend/storage/: __init__.py  db.py  schema.sql  schema_logs.sql
backend/tests/: conftest.py  test_ai_api.py  test_ai_observer.py  test_ai_price_audit.py  test_api.py  test_app_health.py  test_audit_fixes.py  test_circuit_breaker.py  test_config_api.py  test_db.py  test_e2e_replay.py  test_engine_integration.py  test_features.py  test_logging.py  test_logs_api.py  test_models.py  test_modules.py  test_momentum_pulse.py  test_parsers.py  test_rate_limiter.py  test_rules_config.py  test_runner.py  test_scheduler.py  test_scoring.py  test_subscription_mgr.py  test_ws.py
deploy/: .env.example  (+4 more)
(+209 files in other folders)
